	PR c++/54293 - binding reference to member of temporary

* call.c (reference_binding): Fix binding to member of temporary.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@240819 138bc75d-0d04-0410-961f-82ee72b054a4